@@ -10,7 +10,7 @@
 # $HEADER$
 #
 
-package MTT::MPI::Install::LAM;
+package MTT::MPI::Install::MPICH2;
 
 use strict;
 use Cwd;
@@ -24,45 +24,45 @@ use MTT::Common::GNU_Install;
 
 #--------------------------------------------------------------------------
 
-sub _run_laminfo {
-    my ($bindir, $libdir, $grep_string) = @_;
+sub _find_bindings {
+    my ($bindir, $lang) = @_;
 
-
-    my %ENV_SAVE = %ENV;
-    if (exists($ENV{LD_LIBRARY_PATH})) {
-        $ENV{LD_LIBRARY_PATH} = "$libdir:$ENV{LD_LIBRARY_PATH}";
-    } else {
-        $ENV{LD_LIBRARY_PATH} = "$libdir";
-    }
-
-    open INFO, "$bindir/laminfo -all -parsable|";
-    my @file = grep { /$grep_string/ } <INFO>;
+    open INFO, "$bindir/mpich2version|";
+    my @file = grep { /^$lang/ } <INFO>;
     chomp @file;
     close INFO;
 
-    %ENV = %ENV_SAVE;
-
-    return \@file;
-}
-
-#--------------------------------------------------------------------------
-
-sub _find_bindings {
-    my ($bindir, $libdir, $lang) = @_;
-
-    my $file = _run_laminfo($bindir, $libdir, "^bindings:$lang:");
-    return ($file->[0] =~ /^bindings:${lang}:yes/) ? "1" : "0";
+    $file[0] =~ s/^$lang\s*//g;
+    return ("" ne $file[0]) ? "1" : "0";
 }
 
 #--------------------------------------------------------------------------
 
 sub _find_bitness {
-    my ($bindir, $libdir) = @_;
+    my ($bindir) = @_;
 
-    my $str = "^compiler:c:sizeof:pointer:";
-    my $file = _run_laminfo($bindir, $libdir, $str);
-    $file->[0] =~ m/${str}([0-9]+)/;
-    return $1;
+    # JMS still need to write this
+    return "64";
+}
+
+#--------------------------------------------------------------------------
+
+sub _adjust_wrapper {
+    my ($wrapper, $field, $value) = @_;
+    print "Adjusting wrapper: $wrapper / $field / $value\n";
+    if (-f $wrapper && open(WIN, $wrapper) && open(WOUT, ">$wrapper.new")) {
+        while (<WIN>) {
+            if (m/^$field="(.+)"/) {
+                print WOUT "$field=\"$1 $value\"\n";
+            } else {
+                print WOUT $_;
+            }
+        }
+        close(WIN);
+        close(WOUT);
+        system("cp $wrapper.new $wrapper");
+        unlink("$wrapper.new");
+   }
 }
 
 #--------------------------------------------------------------------------
@@ -73,6 +73,8 @@ sub Install {
     my $result_stdout;
     my $result_stderr;
 
+    # Prepare $ret
+
     my $ret;
     $ret->{test_result} = MTT::Values::FAIL;
     $ret->{exit_status} = 0;
@@ -80,30 +82,27 @@ sub Install {
     $ret->{bindir} = "$ret->{installdir}/bin";
     $ret->{libdir} = "$ret->{installdir}/lib";
 
-    # Get some LAM-module-specific config arguments
+    # Get some MPICH2-module-specific config arguments
 
     my $tmp;
-    $tmp = Value($ini, $section, "lam_make_all_arguments");
+    $tmp = Value($ini, $section, "mpich2_make_all_arguments");
     $config->{make_all_arguments} = $tmp
         if (defined($tmp));
 
     $config->{compiler_name} =
-        Value($ini, $section, "lam_compiler_name");
+        Value($ini, $section, "mpich2_compiler_name");
     if ($MTT::Defaults::System_config->{known_compiler_names} !~ /$config->{compiler_name}/) {
         Warning("Unrecognized compiler name in [$section] ($config->{compiler_name}); the only permitted names are: \"$MTT::Defaults::System_config->{known_compiler_names}\"; skipped\n");
         return;
     }
     $config->{compiler_version} =
-        Value($ini, $section, "lam_compiler_version");
+        Value($ini, $section, "mpich2_compiler_version");
 
-    $tmp = Value($ini, $section, "lam_configure_arguments");
-    $tmp =~ s/\n|\r/ /g;
+    $tmp = Value($ini, $section, "mpich2_configure_arguments");
     $config->{configure_arguments} = $tmp
         if (defined($tmp));
 
-    $tmp = Logical($ini, $section, "lam_make_check");
-    $config->{make_check} = $tmp
-        if (defined($tmp));
+    $config->{make_check} = 0;
 
     # Run configure / make all / make check / make install
 
@@ -131,20 +130,37 @@ sub Install {
 
     $ret->{c_bindings} = 1;
     Debug("Have C bindings: 1\n");
-    $ret->{cxx_bindings} = _find_bindings($ret->{bindir},
-                                          $ret->{libdir}, "cxx");
+    $ret->{cxx_bindings} = _find_bindings($ret->{bindir}, "CXX:");
     Debug("Have C++ bindings: $ret->{cxx_bindings}\n"); 
-    $ret->{f77_bindings} = _find_bindings($ret->{bindir},
-                                          $ret->{libdir}, "f77");
+    $ret->{f77_bindings} = _find_bindings($ret->{bindir}, "F77:");
     Debug("Have F77 bindings: $ret->{f77_bindings}\n"); 
-    $ret->{f90_bindings} = "0";
+    $ret->{f90_bindings} = _find_bindings($ret->{bindir}, "F90:");
     Debug("Have F90 bindings: $ret->{f90_bindings}\n"); 
+
+    # Are we adjusting the wrapper compilers?
+
+    my $tmp1;
+    my $tmp2;
+    $tmp1 = Value($ini, $section, "mpich2_additional_wrapper_ldflags");
+    $tmp2 = Value($ini, $section, "mpich2_additional_wrapper_libs");
+    $tmp = "";
+    $tmp = $tmp1
+        if (defined($tmp1));
+    $tmp .= " $tmp2"
+        if (defined($tmp2));
+    if ("" ne $tmp) {
+        my $b = $ret->{bindir};
+        _adjust_wrapper("$b/mpicc", "MPI_LDFLAGS", $tmp);
+        _adjust_wrapper("$b/mpicxx", "MPI_LDFLAGS", $tmp);
+        _adjust_wrapper("$b/mpif77", "MPI_LDFLAGS", $tmp);
+        _adjust_wrapper("$b/mpif90", "MPI_LDFLAGS", $tmp);
+    }
 
     # Calculate bitness (must be processed *after* installation)
 
-    $config->{bitness} = _find_bitness($ret->{bindir}, $ret->{libdir});
+    $config->{bitness} = _find_bitness($ret->{bindir});
 
-    # Done
+    # Done!
 
     $ret->{test_result} = MTT::Values::PASS;
     $ret->{result_message} = "Success";
@@ -153,5 +169,6 @@ sub Install {
 
     return $ret;
 } 
+
 
 1;
