@@ -19,41 +19,47 @@
 # MPI get phase
 #======================================================================
 
-[MPI get: lam-nightly-trunk]
-mpi_details = LAM
+[MPI get: mpich2]
+mpi_details = MPICH2
 
-module = LAM_Snapshot
-lam_snapshot_url = http://www.lam-mpi.org/download/files/nightly
+module = Tarball
+tarball_filename = /home/jsquyres/mpich2-1.0.5p4.tar.gz
+tarball_version = 1.0.5p4
 
 #======================================================================
 # Install MPI phase
 #======================================================================
 
-[MPI install: LAM/GNU]
-mpi_get = lam-nightly-trunk
+[MPI install: MPICH2/GNU]
+mpi_get = mpich2
 save_stdout_on_success = 1
 merge_stdout_stderr = 0
+# Needed to launch in SLURM; adding this to LD_LIBRARY_PATH here
+# propagates this all the way through the test run phases that use
+# this MPI install, where the test executables will need to have this
+# set.
+prepend_path = LD_LIBRARY_PATH /opt/slurm/current/lib
 
-module = LAM
-lam_vpath_mode = none
-lam_make_all_arguments = -j 8
-lam_compiler_name = gnu
-lam_compiler_version = &get_gcc_version()
-lam_configure_arguments = "CFLAGS=-g -pipe" --with-boot-tm=/opt/pbs
+module = MPICH2
+mpich2_vpath_mode = none
+mpich2_make_all_arguments =
+mpich2_compiler_name = gnu
+mpich2_compiler_version = &get_gcc_version()
+mpich2_configure_arguments = "CFLAGS=-g -pipe"
+# These are needed to launch through SLURM; adjust as appropriate.
+mpich2_additional_wrapper_ldflags = -L/opt/slurm/current/lib
+mpich2_additional_wrapper_libs = -lpmi
 
 #======================================================================
 # MPI run details
 #======================================================================
 
-[MPI Details: Open MPI]
-# LAM is nice and simple!
-before_any_exec = lamboot -s -v -b
+[MPI Details: MPICH2]
 
-exec = mpirun C &test_executable() &test_argv()
-
-after_each_exec = lamclean
-
-after_all_exec = lamhalt
+# Launching through SLURM.  If you use mpdboot instead, you need to
+# ensure that multiple mpd's on the same node don't conflict (or never
+# happen).
+exec = srun -n &test_np() &test_executable() &test_argv()
 
 #======================================================================
 # Test get phase
